# mobile-api-permissions

./: README.md
mobile-permissions/: README.md  pyproject.toml
mobile-permissions/mobile_api/: serializer.py  views.py
mobile-permissions/mobile_api_project/: settings.py  urls.py
